# stilo-themes

./: .gitattributes  CONTRIBUTING.md  README.md  gitpush.sh  meson.build
gnome-shell/src/: gnome-shell-high-contrast.css  gnome-shell.css  meson.build
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss
gnome-shell/src/gnome-shell-sass/widgets/: _panel.scss  _popovers.scss
gtk/src/: meson.build
gtk/src/Stilo-dark/gtk-2.0/: gtkrc
gtk/src/Stilo/gtk-2.0/: assets.txt  buttons.rc  gtkrc  meson.build
gtk/src/Stilo/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _custom.scss  _drawing.scss  _variables.scss  gtk-dark.css  gtk-dark.scss  gtk-stiloetto-dark.css  gtk-stiloetto-dark.scss  gtk-stiloetto.css  gtk-stiloetto.scss  gtk.css  gtk.scss  meson.build  parse-sass.sh
gtk/src/Stilo/gtk-4.0/: _colors.scss  _common.scss  _custom.scss  _drawing.scss  gtk-dark.css  gtk-dark.scss  gtk-stiloetto-dark.css  gtk-stiloetto.css  gtk-stiloetto.scss  gtk.css  gtk.scss  meson.build  parse-sass.sh
gtk/src/Stiloetto/: meson.build
gtk/src/Stiloetto-dark/: meson.build
gtk/src/Stiloetto-dark/gtk-2.0/: gtkrc
gtk/src/Stiloetto-dark/gtk-3.0/: meson.build
gtk/src/Stiloetto-dark/gtk-4.0/: install-dark-theme.sh
gtk/src/Stiloetto/gtk-2.0/: assets.txt  buttons.rc  check-radio.rc  gtkrc  meson.build  xfce-panel.rc
gtk/src/Stiloetto/gtk-3.0/: _apps.scss  _colors.scss  _common.scss  _drawing.scss  _variables.scss  gtk-dark.css  gtk.css  install-stiloetto.sh  meson.build
gtk/src/Stiloetto/gtk-4.0/: install-stiloetto.sh  meson.build
src/Stajl/gnome-shell/: gnome-shell-high-contrast.css
src/Stajl/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _extensions.scss
src/Stilo/gtk-2.0/: gtkrc
src/Stilo/gtk-3.0/: _colors.scss  _common.scss  _drawing.scss  gtk-dark.css  gtk.css
xfwm4/src/: meson.build
xfwm4/src/Stilo/: meson.build
xfwm4/src/Stilo-dark/: meson.build
xfwm4/src/Stiloetto/: meson.build
xfwm4/src/Stiloetto-dark/: meson.build  themerc
